--- a/simulations/Mesa Simulations/Mesa ABM of Random Beacon.ipynb
+++ b/simulations/Mesa Simulations/Mesa ABM of Random Beacon.ipynb
@@ -152,8 +152,8 @@
       "agent id = 0\n",
       "agent id = 1\n",
       "agent id = 2\n",
-      "forked agent ID2\n",
       "agent id = 3\n",
+      "forked agent ID3\n",
       "agent id = 4\n",
       "agent id = 5\n",
       "agent id = 6\n",
@@ -162,17 +162,14 @@
       "agent id = 9\n",
       "Number of nodes in the forked state = 1\n",
       "number of active groups = 0\n",
-      "selecting group at random\n",
-      "no active groups available\n",
-      "registering new group\n",
-      "Not enough nodes to register a group\n",
+      "No relay request\n",
       "newest group id0\n",
       "refreshing active nodes list\n",
       "agent id = 0\n",
       "agent id = 1\n",
       "agent id = 2\n",
-      "forked agent ID2\n",
       "agent id = 3\n",
+      "forked agent ID3\n",
       "agent id = 4\n",
       "agent id = 5\n",
       "agent id = 6\n",
@@ -180,23 +177,19 @@
       "forked agent ID7\n",
       "agent id = 8\n",
       "agent id = 9\n",
-      "Number of nodes in the forked state = 2\n",
-      "number of active groups = 0\n",
-      "selecting group at random\n",
-      "no active groups available\n",
-      "registering new group\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "0\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "0\n",
-      "newest group id1\n",
+      "forked agent ID9\n",
+      "Number of nodes in the forked state = 3\n",
+      "number of active groups = 6\n",
+      "No relay request\n",
+      "newest group id3\n",
       "refreshing active nodes list\n",
       "agent id = 0\n",
       "agent id = 1\n",
       "agent id = 2\n",
-      "forked agent ID2\n",
       "agent id = 3\n",
+      "forked agent ID3\n",
       "agent id = 4\n",
+      "forked agent ID4\n",
       "agent id = 5\n",
       "forked agent ID5\n",
       "agent id = 6\n",
@@ -204,63 +197,12 @@
       "agent id = 7\n",
       "forked agent ID7\n",
       "agent id = 8\n",
-      "forked agent ID8\n",
       "agent id = 9\n",
       "forked agent ID9\n",
       "Number of nodes in the forked state = 6\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "1\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "1\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "1\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "1\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "1\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "1\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "2\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "2\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "2\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "2\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "2\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "2\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "3\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "3\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "3\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "3\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "3\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "3\n",
-      "number of active groups = 7\n",
-      "selecting group at random\n",
-      "<agent.Group object at 0x117612320>\n",
-      "registering new group\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "4\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "4\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "4\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "4\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "4\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "4\n",
-      "newest group id5\n",
+      "number of active groups = 12\n",
+      "No relay request\n",
+      "newest group id6\n",
       "refreshing active nodes list\n",
       "agent id = 0\n",
       "agent id = 1\n",
@@ -268,7 +210,6 @@
       "agent id = 3\n",
       "agent id = 4\n",
       "agent id = 5\n",
-      "forked agent ID5\n",
       "agent id = 6\n",
       "forked agent ID6\n",
       "agent id = 7\n",
@@ -277,63 +218,12 @@
       "forked agent ID8\n",
       "agent id = 9\n",
       "forked agent ID9\n",
-      "Number of nodes in the forked state = 5\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "5\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "5\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "5\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "5\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "5\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "6\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "6\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "6\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "6\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "6\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "7\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "7\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "7\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "7\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "7\n",
-      "number of active groups = 14\n",
-      "No relay request\n",
-      "newest group id8\n",
-      "refreshing active nodes list\n",
-      "agent id = 0\n",
-      "agent id = 1\n",
-      "agent id = 2\n",
-      "agent id = 3\n",
-      "agent id = 4\n",
-      "agent id = 5\n",
-      "agent id = 6\n",
-      "agent id = 7\n",
-      "agent id = 8\n",
-      "forked agent ID8\n",
-      "agent id = 9\n",
-      "forked agent ID9\n",
-      "Number of nodes in the forked state = 2\n",
-      "number of active groups = 14\n",
+      "Number of nodes in the forked state = 4\n",
+      "number of active groups = 18\n",
       "selecting group at random\n",
-      "<agent.Group object at 0x117612240>\n",
+      "<agent.Group object at 0x1136ae630>\n",
       "registering new group\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "8\n",
-      "node.ticket_list[self.newest_group_id]\n",
-      "8\n",
-      "newest group id9\n",
+      "newest group id10\n",
       "refreshing active nodes list\n",
       "agent id = 0\n",
       "agent id = 1\n",
@@ -345,14 +235,13 @@
       "agent id = 7\n",
       "agent id = 8\n",
       "agent id = 9\n",
-      "forked agent ID9\n",
-      "Number of nodes in the forked state = 1\n",
-      "number of active groups = 15\n",
+      "Number of nodes in the forked state = 0\n",
+      "number of active groups = 19\n",
       "selecting group at random\n",
-      "<agent.Group object at 0x117612240>\n",
+      "<agent.Group object at 0x1136ae940>\n",
       "registering new group\n",
       "Not enough nodes to register a group\n",
-      "newest group id9\n",
+      "newest group id10\n",
       "refreshing active nodes list\n",
       "agent id = 0\n",
       "agent id = 1\n",
@@ -364,11 +253,10 @@
       "agent id = 7\n",
       "agent id = 8\n",
       "agent id = 9\n",
-      "forked agent ID9\n",
-      "Number of nodes in the forked state = 1\n",
-      "number of active groups = 14\n",
+      "Number of nodes in the forked state = 0\n",
+      "number of active groups = 19\n",
       "No relay request\n",
-      "newest group id9\n",
+      "newest group id10\n",
       "refreshing active nodes list\n",
       "agent id = 0\n",
       "agent id = 1\n",
@@ -380,11 +268,25 @@
       "agent id = 7\n",
       "agent id = 8\n",
       "agent id = 9\n",
-      "forked agent ID9\n",
-      "Number of nodes in the forked state = 1\n",
+      "Number of nodes in the forked state = 0\n",
+      "number of active groups = 13\n",
+      "No relay request\n",
+      "newest group id10\n",
+      "refreshing active nodes list\n",
+      "agent id = 0\n",
+      "agent id = 1\n",
+      "agent id = 2\n",
+      "agent id = 3\n",
+      "agent id = 4\n",
+      "agent id = 5\n",
+      "agent id = 6\n",
+      "agent id = 7\n",
+      "agent id = 8\n",
+      "agent id = 9\n",
+      "Number of nodes in the forked state = 0\n",
       "number of active groups = 7\n",
       "No relay request\n",
-      "newest group id9\n",
+      "newest group id10\n",
       "refreshing active nodes list\n",
       "agent id = 0\n",
       "agent id = 1\n",
@@ -396,30 +298,13 @@
       "agent id = 7\n",
       "agent id = 8\n",
       "agent id = 9\n",
-      "forked agent ID9\n",
-      "Number of nodes in the forked state = 1\n",
-      "number of active groups = 1\n",
-      "No relay request\n",
-      "newest group id9\n",
-      "refreshing active nodes list\n",
-      "agent id = 0\n",
-      "agent id = 1\n",
-      "agent id = 2\n",
-      "agent id = 3\n",
-      "agent id = 4\n",
-      "agent id = 5\n",
-      "agent id = 6\n",
-      "agent id = 7\n",
-      "agent id = 8\n",
-      "agent id = 9\n",
-      "forked agent ID9\n",
-      "Number of nodes in the forked state = 1\n",
+      "Number of nodes in the forked state = 0\n",
       "number of active groups = 0\n",
       "selecting group at random\n",
       "no active groups available\n",
       "registering new group\n",
       "Not enough nodes to register a group\n",
-      "newest group id9\n",
+      "newest group id10\n",
       "refreshing active nodes list\n",
       "agent id = 0\n",
       "agent id = 1\n",
@@ -431,11 +316,10 @@
       "agent id = 7\n",
       "agent id = 8\n",
       "agent id = 9\n",
-      "forked agent ID9\n",
-      "Number of nodes in the forked state = 1\n",
+      "Number of nodes in the forked state = 0\n",
       "number of active groups = 0\n",
       "No relay request\n",
-      "newest group id9\n",
+      "newest group id10\n",
       "refreshing active nodes list\n",
       "agent id = 0\n",
       "agent id = 1\n",
@@ -447,49 +331,10 @@
       "agent id = 7\n",
       "agent id = 8\n",
       "agent id = 9\n",
-      "forked agent ID9\n",
-      "Number of nodes in the forked state = 1\n",
-      "number of active groups = 0\n",
-      "selecting group at random\n",
-      "no active groups available\n",
-      "registering new group\n",
-      "Not enough nodes to register a group\n",
-      "newest group id9\n",
-      "refreshing active nodes list\n",
-      "agent id = 0\n",
-      "agent id = 1\n",
-      "agent id = 2\n",
-      "agent id = 3\n",
-      "agent id = 4\n",
-      "agent id = 5\n",
-      "agent id = 6\n",
-      "agent id = 7\n",
-      "agent id = 8\n",
-      "agent id = 9\n",
-      "forked agent ID9\n",
-      "Number of nodes in the forked state = 1\n",
-      "number of active groups = 0\n",
-      "selecting group at random\n",
-      "no active groups available\n",
-      "registering new group\n",
-      "Not enough nodes to register a group\n",
-      "newest group id9\n",
-      "refreshing active nodes list\n",
-      "agent id = 0\n",
-      "agent id = 1\n",
-      "agent id = 2\n",
-      "agent id = 3\n",
-      "agent id = 4\n",
-      "agent id = 5\n",
-      "agent id = 6\n",
-      "agent id = 7\n",
-      "agent id = 8\n",
-      "agent id = 9\n",
-      "forked agent ID9\n",
-      "Number of nodes in the forked state = 1\n",
+      "Number of nodes in the forked state = 0\n",
       "number of active groups = 0\n",
       "No relay request\n",
-      "newest group id9\n",
+      "newest group id10\n",
       "refreshing active nodes list\n",
       "agent id = 0\n",
       "agent id = 1\n",
@@ -501,49 +346,10 @@
       "agent id = 7\n",
       "agent id = 8\n",
       "agent id = 9\n",
-      "forked agent ID9\n",
-      "Number of nodes in the forked state = 1\n",
-      "number of active groups = 0\n",
-      "selecting group at random\n",
-      "no active groups available\n",
-      "registering new group\n",
-      "Not enough nodes to register a group\n",
-      "newest group id9\n",
-      "refreshing active nodes list\n",
-      "agent id = 0\n",
-      "agent id = 1\n",
-      "agent id = 2\n",
-      "agent id = 3\n",
-      "agent id = 4\n",
-      "agent id = 5\n",
-      "agent id = 6\n",
-      "agent id = 7\n",
-      "agent id = 8\n",
-      "agent id = 9\n",
-      "forked agent ID9\n",
-      "Number of nodes in the forked state = 1\n",
-      "number of active groups = 0\n",
-      "selecting group at random\n",
-      "no active groups available\n",
-      "registering new group\n",
-      "Not enough nodes to register a group\n",
-      "newest group id9\n",
-      "refreshing active nodes list\n",
-      "agent id = 0\n",
-      "agent id = 1\n",
-      "agent id = 2\n",
-      "agent id = 3\n",
-      "agent id = 4\n",
-      "agent id = 5\n",
-      "agent id = 6\n",
-      "agent id = 7\n",
-      "agent id = 8\n",
-      "agent id = 9\n",
-      "forked agent ID9\n",
-      "Number of nodes in the forked state = 1\n",
+      "Number of nodes in the forked state = 0\n",
       "number of active groups = 0\n",
       "No relay request\n",
-      "newest group id9\n",
+      "newest group id10\n",
       "refreshing active nodes list\n",
       "agent id = 0\n",
       "agent id = 1\n",
@@ -555,14 +361,43 @@
       "agent id = 7\n",
       "agent id = 8\n",
       "agent id = 9\n",
-      "forked agent ID9\n",
-      "Number of nodes in the forked state = 1\n",
+      "Number of nodes in the forked state = 0\n",
+      "number of active groups = 0\n",
+      "No relay request\n",
+      "newest group id10\n",
+      "refreshing active nodes list\n",
+      "agent id = 0\n",
+      "agent id = 1\n",
+      "agent id = 2\n",
+      "agent id = 3\n",
+      "agent id = 4\n",
+      "agent id = 5\n",
+      "agent id = 6\n",
+      "agent id = 7\n",
+      "agent id = 8\n",
+      "agent id = 9\n",
+      "Number of nodes in the forked state = 0\n",
+      "number of active groups = 0\n",
+      "No relay request\n",
+      "newest group id10\n",
+      "refreshing active nodes list\n",
+      "agent id = 0\n",
+      "agent id = 1\n",
+      "agent id = 2\n",
+      "agent id = 3\n",
+      "agent id = 4\n",
+      "agent id = 5\n",
+      "agent id = 6\n",
+      "agent id = 7\n",
+      "agent id = 8\n",
+      "agent id = 9\n",
+      "Number of nodes in the forked state = 0\n",
       "number of active groups = 0\n",
       "selecting group at random\n",
       "no active groups available\n",
       "registering new group\n",
       "Not enough nodes to register a group\n",
-      "newest group id9\n",
+      "newest group id10\n",
       "refreshing active nodes list\n",
       "agent id = 0\n",
       "agent id = 1\n",
@@ -574,10 +409,63 @@
       "agent id = 7\n",
       "agent id = 8\n",
       "agent id = 9\n",
-      "forked agent ID9\n",
-      "Number of nodes in the forked state = 1\n",
+      "Number of nodes in the forked state = 0\n",
       "number of active groups = 0\n",
-      "No relay request\n"
+      "selecting group at random\n",
+      "no active groups available\n",
+      "registering new group\n",
+      "Not enough nodes to register a group\n",
+      "newest group id10\n",
+      "refreshing active nodes list\n",
+      "agent id = 0\n",
+      "agent id = 1\n",
+      "agent id = 2\n",
+      "agent id = 3\n",
+      "agent id = 4\n",
+      "agent id = 5\n",
+      "agent id = 6\n",
+      "agent id = 7\n",
+      "agent id = 8\n",
+      "agent id = 9\n",
+      "Number of nodes in the forked state = 0\n",
+      "number of active groups = 0\n",
+      "No relay request\n",
+      "newest group id10\n",
+      "refreshing active nodes list\n",
+      "agent id = 0\n",
+      "agent id = 1\n",
+      "agent id = 2\n",
+      "agent id = 3\n",
+      "agent id = 4\n",
+      "agent id = 5\n",
+      "agent id = 6\n",
+      "agent id = 7\n",
+      "agent id = 8\n",
+      "agent id = 9\n",
+      "Number of nodes in the forked state = 0\n",
+      "number of active groups = 0\n",
+      "selecting group at random\n",
+      "no active groups available\n",
+      "registering new group\n",
+      "Not enough nodes to register a group\n",
+      "newest group id10\n",
+      "refreshing active nodes list\n",
+      "agent id = 0\n",
+      "agent id = 1\n",
+      "agent id = 2\n",
+      "agent id = 3\n",
+      "agent id = 4\n",
+      "agent id = 5\n",
+      "agent id = 6\n",
+      "agent id = 7\n",
+      "agent id = 8\n",
+      "agent id = 9\n",
+      "Number of nodes in the forked state = 0\n",
+      "number of active groups = 0\n",
+      "selecting group at random\n",
+      "no active groups available\n",
+      "registering new group\n",
+      "Not enough nodes to register a group\n"
      ]
     }
    ],
