--- a/simulations/Mesa Simulations/Mesa ABM of Random Beacon.ipynb
+++ b/simulations/Mesa Simulations/Mesa ABM of Random Beacon.ipynb
@@ -153,8 +153,8 @@
       "agent id = 1\n",
       "agent id = 2\n",
       "agent id = 3\n",
-      "forked agent ID3\n",
       "agent id = 4\n",
+      "forked agent ID4\n",
       "agent id = 5\n",
       "agent id = 6\n",
       "agent id = 7\n",
@@ -162,23 +162,28 @@
       "agent id = 9\n",
       "Number of nodes in the forked state = 1\n",
       "number of active groups = 0\n",
-      "No relay request\n",
+      "selecting group at random\n",
+      "no active groups available\n",
+      "registering new group\n",
+      "Not enough nodes to register a group\n",
       "newest group id0\n",
       "refreshing active nodes list\n",
       "agent id = 0\n",
       "agent id = 1\n",
       "agent id = 2\n",
+      "forked agent ID2\n",
       "agent id = 3\n",
-      "forked agent ID3\n",
       "agent id = 4\n",
+      "forked agent ID4\n",
       "agent id = 5\n",
       "agent id = 6\n",
+      "forked agent ID6\n",
       "agent id = 7\n",
-      "forked agent ID7\n",
       "agent id = 8\n",
+      "forked agent ID8\n",
       "agent id = 9\n",
       "forked agent ID9\n",
-      "Number of nodes in the forked state = 3\n",
+      "Number of nodes in the forked state = 5\n",
       "number of active groups = 6\n",
       "No relay request\n",
       "newest group id3\n",
@@ -187,43 +192,22 @@
       "agent id = 1\n",
       "agent id = 2\n",
       "agent id = 3\n",
-      "forked agent ID3\n",
       "agent id = 4\n",
       "forked agent ID4\n",
       "agent id = 5\n",
-      "forked agent ID5\n",
       "agent id = 6\n",
       "forked agent ID6\n",
       "agent id = 7\n",
-      "forked agent ID7\n",
-      "agent id = 8\n",
-      "agent id = 9\n",
-      "forked agent ID9\n",
-      "Number of nodes in the forked state = 6\n",
-      "number of active groups = 12\n",
-      "No relay request\n",
-      "newest group id6\n",
-      "refreshing active nodes list\n",
-      "agent id = 0\n",
-      "agent id = 1\n",
-      "agent id = 2\n",
-      "agent id = 3\n",
-      "agent id = 4\n",
-      "agent id = 5\n",
-      "agent id = 6\n",
-      "forked agent ID6\n",
-      "agent id = 7\n",
-      "forked agent ID7\n",
       "agent id = 8\n",
       "forked agent ID8\n",
       "agent id = 9\n",
       "forked agent ID9\n",
       "Number of nodes in the forked state = 4\n",
-      "number of active groups = 18\n",
+      "number of active groups = 12\n",
       "selecting group at random\n",
-      "<agent.Group object at 0x1136ae630>\n",
+      "<agent.Group object at 0x117e79668>\n",
       "registering new group\n",
-      "newest group id10\n",
+      "newest group id7\n",
       "refreshing active nodes list\n",
       "agent id = 0\n",
       "agent id = 1\n",
@@ -234,44 +218,51 @@
       "agent id = 6\n",
       "agent id = 7\n",
       "agent id = 8\n",
+      "forked agent ID8\n",
       "agent id = 9\n",
-      "Number of nodes in the forked state = 0\n",
-      "number of active groups = 19\n",
-      "selecting group at random\n",
-      "<agent.Group object at 0x1136ae940>\n",
-      "registering new group\n",
-      "Not enough nodes to register a group\n",
-      "newest group id10\n",
-      "refreshing active nodes list\n",
-      "agent id = 0\n",
-      "agent id = 1\n",
-      "agent id = 2\n",
-      "agent id = 3\n",
-      "agent id = 4\n",
-      "agent id = 5\n",
-      "agent id = 6\n",
-      "agent id = 7\n",
-      "agent id = 8\n",
-      "agent id = 9\n",
-      "Number of nodes in the forked state = 0\n",
-      "number of active groups = 19\n",
-      "No relay request\n",
-      "newest group id10\n",
-      "refreshing active nodes list\n",
-      "agent id = 0\n",
-      "agent id = 1\n",
-      "agent id = 2\n",
-      "agent id = 3\n",
-      "agent id = 4\n",
-      "agent id = 5\n",
-      "agent id = 6\n",
-      "agent id = 7\n",
-      "agent id = 8\n",
-      "agent id = 9\n",
-      "Number of nodes in the forked state = 0\n",
+      "forked agent ID9\n",
+      "Number of nodes in the forked state = 2\n",
       "number of active groups = 13\n",
+      "selecting group at random\n",
+      "<agent.Group object at 0x117e79668>\n",
+      "registering new group\n",
+      "newest group id8\n",
+      "refreshing active nodes list\n",
+      "agent id = 0\n",
+      "agent id = 1\n",
+      "agent id = 2\n",
+      "agent id = 3\n",
+      "agent id = 4\n",
+      "agent id = 5\n",
+      "agent id = 6\n",
+      "agent id = 7\n",
+      "agent id = 8\n",
+      "forked agent ID8\n",
+      "agent id = 9\n",
+      "forked agent ID9\n",
+      "Number of nodes in the forked state = 2\n",
+      "number of active groups = 14\n",
       "No relay request\n",
-      "newest group id10\n",
+      "newest group id8\n",
+      "refreshing active nodes list\n",
+      "agent id = 0\n",
+      "agent id = 1\n",
+      "agent id = 2\n",
+      "agent id = 3\n",
+      "agent id = 4\n",
+      "agent id = 5\n",
+      "agent id = 6\n",
+      "agent id = 7\n",
+      "agent id = 8\n",
+      "forked agent ID8\n",
+      "agent id = 9\n",
+      "forked agent ID9\n",
+      "Number of nodes in the forked state = 2\n",
+      "number of active groups = 14\n",
+      "selecting group at random\n",
+      "<agent.Group object at 0x117e603c8>\n",
+      "registering new group\n",
+      "newest group id9\n",
       "refreshing active nodes list\n",
       "agent id = 0\n",
       "agent id = 1\n",
@@ -283,10 +274,14 @@
       "agent id = 7\n",
       "agent id = 8\n",
       "agent id = 9\n",
-      "Number of nodes in the forked state = 0\n",
-      "number of active groups = 7\n",
-      "No relay request\n",
-      "newest group id10\n",
+      "forked agent ID9\n",
+      "Number of nodes in the forked state = 1\n",
+      "number of active groups = 9\n",
+      "selecting group at random\n",
+      "<agent.Group object at 0x117e603c8>\n",
+      "registering new group\n",
+      "Not enough nodes to register a group\n",
+      "newest group id9\n",
       "refreshing active nodes list\n",
       "agent id = 0\n",
       "agent id = 1\n",
@@ -298,13 +293,62 @@
       "agent id = 7\n",
       "agent id = 8\n",
       "agent id = 9\n",
-      "Number of nodes in the forked state = 0\n",
+      "forked agent ID9\n",
+      "Number of nodes in the forked state = 1\n",
+      "number of active groups = 2\n",
+      "No relay request\n",
+      "newest group id9\n",
+      "refreshing active nodes list\n",
+      "agent id = 0\n",
+      "agent id = 1\n",
+      "agent id = 2\n",
+      "agent id = 3\n",
+      "agent id = 4\n",
+      "agent id = 5\n",
+      "agent id = 6\n",
+      "agent id = 7\n",
+      "agent id = 8\n",
+      "agent id = 9\n",
+      "forked agent ID9\n",
+      "Number of nodes in the forked state = 1\n",
+      "number of active groups = 1\n",
+      "No relay request\n",
+      "newest group id9\n",
+      "refreshing active nodes list\n",
+      "agent id = 0\n",
+      "agent id = 1\n",
+      "agent id = 2\n",
+      "agent id = 3\n",
+      "agent id = 4\n",
+      "agent id = 5\n",
+      "agent id = 6\n",
+      "agent id = 7\n",
+      "agent id = 8\n",
+      "agent id = 9\n",
+      "forked agent ID9\n",
+      "Number of nodes in the forked state = 1\n",
+      "number of active groups = 1\n",
+      "No relay request\n",
+      "newest group id9\n",
+      "refreshing active nodes list\n",
+      "agent id = 0\n",
+      "agent id = 1\n",
+      "agent id = 2\n",
+      "agent id = 3\n",
+      "agent id = 4\n",
+      "agent id = 5\n",
+      "agent id = 6\n",
+      "agent id = 7\n",
+      "agent id = 8\n",
+      "agent id = 9\n",
+      "forked agent ID9\n",
+      "Number of nodes in the forked state = 1\n",
       "number of active groups = 0\n",
       "selecting group at random\n",
       "no active groups available\n",
       "registering new group\n",
       "Not enough nodes to register a group\n",
-      "newest group id10\n",
+      "newest group id9\n",
       "refreshing active nodes list\n",
       "agent id = 0\n",
       "agent id = 1\n",
@@ -316,10 +360,11 @@
       "agent id = 7\n",
       "agent id = 8\n",
       "agent id = 9\n",
-      "Number of nodes in the forked state = 0\n",
+      "forked agent ID9\n",
+      "Number of nodes in the forked state = 1\n",
       "number of active groups = 0\n",
       "No relay request\n",
-      "newest group id10\n",
+      "newest group id9\n",
       "refreshing active nodes list\n",
       "agent id = 0\n",
       "agent id = 1\n",
@@ -331,10 +376,11 @@
       "agent id = 7\n",
       "agent id = 8\n",
       "agent id = 9\n",
-      "Number of nodes in the forked state = 0\n",
+      "forked agent ID9\n",
+      "Number of nodes in the forked state = 1\n",
       "number of active groups = 0\n",
       "No relay request\n",
-      "newest group id10\n",
+      "newest group id9\n",
       "refreshing active nodes list\n",
       "agent id = 0\n",
       "agent id = 1\n",
@@ -346,58 +392,14 @@
       "agent id = 7\n",
       "agent id = 8\n",
       "agent id = 9\n",
-      "Number of nodes in the forked state = 0\n",
-      "number of active groups = 0\n",
-      "No relay request\n",
-      "newest group id10\n",
-      "refreshing active nodes list\n",
-      "agent id = 0\n",
-      "agent id = 1\n",
-      "agent id = 2\n",
-      "agent id = 3\n",
-      "agent id = 4\n",
-      "agent id = 5\n",
-      "agent id = 6\n",
-      "agent id = 7\n",
-      "agent id = 8\n",
-      "agent id = 9\n",
-      "Number of nodes in the forked state = 0\n",
-      "number of active groups = 0\n",
-      "No relay request\n",
-      "newest group id10\n",
-      "refreshing active nodes list\n",
-      "agent id = 0\n",
-      "agent id = 1\n",
-      "agent id = 2\n",
-      "agent id = 3\n",
-      "agent id = 4\n",
-      "agent id = 5\n",
-      "agent id = 6\n",
-      "agent id = 7\n",
-      "agent id = 8\n",
-      "agent id = 9\n",
-      "Number of nodes in the forked state = 0\n",
-      "number of active groups = 0\n",
-      "No relay request\n",
-      "newest group id10\n",
-      "refreshing active nodes list\n",
-      "agent id = 0\n",
-      "agent id = 1\n",
-      "agent id = 2\n",
-      "agent id = 3\n",
-      "agent id = 4\n",
-      "agent id = 5\n",
-      "agent id = 6\n",
-      "agent id = 7\n",
-      "agent id = 8\n",
-      "agent id = 9\n",
-      "Number of nodes in the forked state = 0\n",
+      "forked agent ID9\n",
+      "Number of nodes in the forked state = 1\n",
       "number of active groups = 0\n",
       "selecting group at random\n",
       "no active groups available\n",
       "registering new group\n",
       "Not enough nodes to register a group\n",
-      "newest group id10\n",
+      "newest group id9\n",
       "refreshing active nodes list\n",
       "agent id = 0\n",
       "agent id = 1\n",
@@ -409,28 +411,11 @@
       "agent id = 7\n",
       "agent id = 8\n",
       "agent id = 9\n",
-      "Number of nodes in the forked state = 0\n",
-      "number of active groups = 0\n",
-      "selecting group at random\n",
-      "no active groups available\n",
-      "registering new group\n",
-      "Not enough nodes to register a group\n",
-      "newest group id10\n",
-      "refreshing active nodes list\n",
-      "agent id = 0\n",
-      "agent id = 1\n",
-      "agent id = 2\n",
-      "agent id = 3\n",
-      "agent id = 4\n",
-      "agent id = 5\n",
-      "agent id = 6\n",
-      "agent id = 7\n",
-      "agent id = 8\n",
-      "agent id = 9\n",
-      "Number of nodes in the forked state = 0\n",
+      "forked agent ID9\n",
+      "Number of nodes in the forked state = 1\n",
       "number of active groups = 0\n",
       "No relay request\n",
-      "newest group id10\n",
+      "newest group id9\n",
       "refreshing active nodes list\n",
       "agent id = 0\n",
       "agent id = 1\n",
@@ -442,13 +427,30 @@
       "agent id = 7\n",
       "agent id = 8\n",
       "agent id = 9\n",
-      "Number of nodes in the forked state = 0\n",
+      "forked agent ID9\n",
+      "Number of nodes in the forked state = 1\n",
+      "number of active groups = 0\n",
+      "No relay request\n",
+      "newest group id9\n",
+      "refreshing active nodes list\n",
+      "agent id = 0\n",
+      "agent id = 1\n",
+      "agent id = 2\n",
+      "agent id = 3\n",
+      "agent id = 4\n",
+      "agent id = 5\n",
+      "agent id = 6\n",
+      "agent id = 7\n",
+      "agent id = 8\n",
+      "agent id = 9\n",
+      "forked agent ID9\n",
+      "Number of nodes in the forked state = 1\n",
       "number of active groups = 0\n",
       "selecting group at random\n",
       "no active groups available\n",
       "registering new group\n",
       "Not enough nodes to register a group\n",
-      "newest group id10\n",
+      "newest group id9\n",
       "refreshing active nodes list\n",
       "agent id = 0\n",
       "agent id = 1\n",
@@ -460,7 +462,27 @@
       "agent id = 7\n",
       "agent id = 8\n",
       "agent id = 9\n",
-      "Number of nodes in the forked state = 0\n",
+      "forked agent ID9\n",
+      "Number of nodes in the forked state = 1\n",
+      "number of active groups = 0\n",
+      "selecting group at random\n",
+      "no active groups available\n",
+      "registering new group\n",
+      "Not enough nodes to register a group\n",
+      "newest group id9\n",
+      "refreshing active nodes list\n",
+      "agent id = 0\n",
+      "agent id = 1\n",
+      "agent id = 2\n",
+      "agent id = 3\n",
+      "agent id = 4\n",
+      "agent id = 5\n",
+      "agent id = 6\n",
+      "agent id = 7\n",
+      "agent id = 8\n",
+      "agent id = 9\n",
+      "forked agent ID9\n",
+      "Number of nodes in the forked state = 1\n",
       "number of active groups = 0\n",
       "selecting group at random\n",
       "no active groups available\n",
