--- a/infrastructure/kube/keep-dev/kube-setup.org
+++ b/infrastructure/kube/keep-dev/kube-setup.org
@@ -278,7 +278,7 @@ kubectl delete \
 *** DONE Ingress
 **** DONE Describe
 
-#+BEGIN_SRC sh :results drawer
+#+BEGIN_SRC sh :results pp
 date -u
 whoami
 
@@ -287,32 +287,6 @@ kubectl describe \
 #+END_SRC
 
 #+RESULTS:
-:RESULTS:
-Tue Jan 15 14:52:42 UTC 2019
-sthompson22
-Name:             atlantis-https
-Namespace:        default
-Address:          35.244.176.50
-Default backend:  atlantis-https:8443 (10.102.1.27:8443)
-TLS:
-  atlantis-tls terminates 
-Rules:
-  Host  Path  Backends
-  ----  ----  --------
-  *     *     atlantis-https:8443 (10.102.1.27:8443)
-Annotations:
-  kubectl.kubernetes.io/last-applied-configuration:  {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.allow-http":"false","kubernetes.io/ingress.class":"gce","kubernetes.io/ingress.global-static-ip-name":"keep-dev-atlantis-external-ip-0"},"name":"atlantis-https","namespace":"default"},"spec":{"backend":{"serviceName":"atlantis-https","servicePort":8443},"tls":[{"hosts":null,"secretName":"atlantis-tls"}]}}
-
-  ingress.kubernetes.io/https-target-proxy:     k8s-tps-default-atlantis-https--2233353f8ad2173d
-  ingress.kubernetes.io/ssl-cert:               k8s-ssl-9fac3675b9472b1a-62b905f879ee5ad1--2233353f8ad2173d
-  ingress.kubernetes.io/url-map:                k8s-um-default-atlantis-https--2233353f8ad2173d
-  kubernetes.io/ingress.allow-http:             false
-  kubernetes.io/ingress.class:                  gce
-  kubernetes.io/ingress.global-static-ip-name:  keep-dev-atlantis-external-ip-0
-  ingress.kubernetes.io/backends:               {"k8s-be-30885--2233353f8ad2173d":"HEALTHY"}
-  ingress.kubernetes.io/https-forwarding-rule:  k8s-fws-default-atlantis-https--2233353f8ad2173d
-Events:                                         <none>
-:END:
 
 **** DONE Create
 
